src/test/testData/src/main/resources/META-INF/doma/example/dao/inspection/option/SpecificParamTypeBindVariableInspectionTestDao/selectCollector.sql
SELECT *
  FROM employee
 WHERE salary > /* salary */1000
 and active = /* <error descr="The bind variable [collector] does not exist in the DAO method [selectCollector]">collector</error> */true
